Collapse fixes and affix fixes

--- a/app/styles/eco.scss
+++ b/app/styles/eco.scss
@@ -1,4 +1,4 @@
-/*  HOW IT WORKS CSS  */ 
+/* HOW IT WORKS CSS  */ 
 
 
 .how_it_works{
@@ -23,21 +23,20 @@
 
 /* END HOW IT WORKS */
 
-.title {
-	
-	text-rendering: optimizeLegibility;
-
-	h1 {
-		font-size: 5rem;
-		font-family:"Raleway", sans-serif;
-		font-weight:200;
-		color: white;
-    text-shadow: 1px 1px 3px #2e2e2e;
-	}	
-}
-
 
 // CITY PROFILE SECTION
+
+#affix {
+  margin:5px;
+  padding: 10px 25px;
+  // background-color:#a1a1a1;
+  // box-shadow: 0px 0px 3px #a1a1a1;
+
+  li:eq(n+1){
+    border-top:1px #a1a1a1;
+  }
+
+}
 
 
 .subindices {
@@ -86,17 +85,11 @@
 
   &#construction{
 
-
-
   }
-
-
 
   &#energy{
     background-color:#FAEE40;
   }
-
-
 
   .indicators{
 
@@ -115,12 +108,12 @@
         // border-left: 1px #a1a1a1 solid;
       }
       div.row.descriptions {
-        background-color:white;
+        // background-color:white;
       }
 
       div.row.descriptions div{
         height: 100%;
-        background-color:white;
+        // background-color:white;
         color:#333333;
         transition: background-color 1.0s ease;
         padding:4px;
@@ -145,6 +138,18 @@
 
 // HOME PAGE SECTION
 
+.title {
+  
+  text-rendering: optimizeLegibility;
+
+  h1 {
+    font-size: 5rem;
+    font-family:"Raleway", sans-serif;
+    font-weight:200;
+    color: white;
+    text-shadow: 1px 1px 3px #2e2e2e;
+  } 
+}
 
 #home-icons {
   color:white;
@@ -211,6 +216,7 @@
   -o-transition-delay: 0;
   transition-delay: 0;
 }
+
 // @media (max-width: 599px) {
 //   .background-video video {
 //     display: none;
